--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
 <body>
     <h1>Practicas</h1>
 
-    <a href="">El Paías</a>
+    <a href="hackersELPAIS/hackers.html">El País</a>
+
+    <br><br>
+
+    <a href="bandera.html">Bandera España</a>
 </body>
